Fix line wrapping on some os/browser combos.

--- a/admin/themes/default/css/default.css
+++ b/admin/themes/default/css/default.css
@@ -542,7 +542,7 @@ body {font:62.5% "Lucida Grande",Verdana, Arial, Helvetica, sans-serif; backgrou
     /* Simple Search */
     #simple-search-form {
         padding:0;
-        width: 232px;
+        width: 250px;
         float:right;
         margin:0 0 20px;
         clear:right;
